# opengl_beginner

./: CMakeLists.txt  README.md  build_linux.sh  clang-format.bash
.github/: c-cpp.yml
.github/workflows/: c-cpp.yml
notes/blending/: blending.md
notes/graphics_pipeline/: graphics_pipeline.md
notes/shader/: shader.md
test/hello_window/: config.h  hello_window.cc
test/shader_test/: shader.h  shader_test.cc
test/shader_test/shaders/: vertex.vs
test/triangle_test/: triangle_test.cc
test/what_are_shaders/: config.h  triangle_mesh.cc  triangle_mesh.h  what_are_shaders.cc
textures/: draw_the_texture.cc  gl_window.cc  gl_window.h  material.cc  material.h  mesh.cc  mesh.h  shader.cc
textures/shaders/: fragment.txt  vertex.txt
